--- a/public/private/scroll10.html
+++ b/public/private/scroll10.html
@@ -19,7 +19,7 @@
                 left: 0px;
                 top: 206px;
                 width: 100%"><h2 style="font-size: 45px;
-                  color: #ffffff">Fixed element</h2><p>with a clipping ancestor below the viewport</p></div></div></div></div></section><section id="slide" style="height: 1099px"><div id="bcg" style="background-image: url('dark_1366x854_01_prog.jpg');
+                  color: #ffffff">Fixed Element</h2></div></div></div></div></section><section id="slide" style="height: 1099px"><div id="bcg" style="background-image: url('dark_1366x854_01_prog.jpg');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
