--- a/src/private/index.html
+++ b/src/private/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <ul style="font-family: Helvetica, Arial; font-size: 16pt;">
-      <li><a href="scroll01.html"
-        style="text-decoration: none;">My Yahoo reduction</a></li>
       <li><a href="scroll02.html"
         style="text-decoration: none;">My Yahoo reduction (fixed bg case only)</a></li>
+      <li><a href="scroll11.html"
+        style="text-decoration: none;">My Yahoo reduction (fixed bg descendant)</a></li>
       <li><a href="scroll03.html"
         style="text-decoration: none;">My Yahoo reduction (not repro)</a></li>
       <li><a href="scroll06.html"
