--- a/src/private/index.html
+++ b/src/private/index.html
@@ -6,6 +6,8 @@
   </head>
   <body>
     <ul style="font-family: Helvetica, Arial; font-size: 16pt;">
+      <li><a href="scroll12.html"
+        style="text-decoration: none;">My Yahoo reduction</a></li>
       <li><a href="scroll02.html"
         style="text-decoration: none;">My Yahoo reduction (fixed bg case only)</a></li>
       <li><a href="scroll11.html"
