--- a/public/private/scroll11.html
+++ b/public/private/scroll11.html
@@ -12,6 +12,7 @@
       left: 0;
       width: 100%;
       height: 100px;
+      clip: rect(0,auto,6.5em,0);
       border-bottom: 1px solid #490f76;
       box-shadow: 0 0 9px 0 #490f76;
       z-index: 9"></div><div id="myContent" style="position: relative"><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div></div></body></html>
