--- a/src/private/scroll11.html
+++ b/src/private/scroll11.html
@@ -23,6 +23,7 @@
       left: 0;
       width: 100%;
       height: 100px;
+      clip: rect(0,auto,6.5em,0);
       border-bottom: 1px solid #490f76;
       box-shadow: 0 0 9px 0 #490f76;
       z-index: 9;
