--- a/src/private/index.html
+++ b/src/private/index.html
@@ -22,6 +22,8 @@
         style="text-decoration: none;">NegZ not visible (opacity zero)</a></li>
       <li><a href="scroll10.html"
         style="text-decoration: none;">Parallax scrolling demo reduction</a></li>
+      <li><a href="scroll13.html"
+        style="text-decoration: none;">Bg-clip repro</a></li>
     </ul>
   </body>
 </html>
