--- a/src/private/index.html
+++ b/src/private/index.html
@@ -24,6 +24,8 @@
         style="text-decoration: none;">Parallax scrolling demo reduction</a></li>
       <li><a href="scroll13.html"
         style="text-decoration: none;">Bg-clip repro</a></li>
+      <li><a href="scroll14.html"
+        style="text-decoration: none;">Fixed bg table</a></li>
     </ul>
   </body>
 </html>
