--- a/src/private/index.html
+++ b/src/private/index.html
@@ -26,6 +26,8 @@
         style="text-decoration: none;">Bg-clip repro</a></li>
       <li><a href="scroll14.html"
         style="text-decoration: none;">Fixed bg table</a></li>
+      <li><a href="scroll15.html"
+        style="text-decoration: none;">Read-modify-write</a></li>
     </ul>
   </body>
 </html>
