--- a/src/private/index.html
+++ b/src/private/index.html
@@ -27,7 +27,7 @@
       <li><a href="scroll14.html"
         style="text-decoration: none;">Fixed bg table</a></li>
       <li><a href="scroll15.html"
-        style="text-decoration: none;">Read-modify-write</a></li>
+        style="text-decoration: none;">Invert outline color</a></li>
     </ul>
   </body>
 </html>
