--- a/src/private/index.html
+++ b/src/private/index.html
@@ -28,6 +28,8 @@
         style="text-decoration: none;">Fixed bg table</a></li>
       <li><a href="scroll15.html"
         style="text-decoration: none;">Invert outline color</a></li>
+      <li><a href="scroll16.html"
+        style="text-decoration: none;">MIUI reduction</a></li>
     </ul>
   </body>
 </html>
