--- a/src/private/index.html
+++ b/src/private/index.html
@@ -21,7 +21,9 @@
       <li><a href="scroll09.html"
         style="text-decoration: none;">NegZ not visible (opacity zero)</a></li>
       <li><a href="scroll10.html"
-        style="text-decoration: none;">Parallax scrolling demo reduction</a></li>
+        style="text-decoration: none;">Parallax scrolling demo reduction 1</a></li>
+      <li><a href="scroll18.html"
+        style="text-decoration: none;">Parallax scrolling demo reduction 2</a></li>
       <li><a href="scroll13.html"
         style="text-decoration: none;">Bg-clip repro</a></li>
       <li><a href="scroll14.html"
