--- a/src/private/index.html
+++ b/src/private/index.html
@@ -32,6 +32,8 @@
         style="text-decoration: none;">Invert outline color</a></li>
       <li><a href="scroll16.html"
         style="text-decoration: none;">MIUI reduction</a></li>
+      <li><a href="scroll20.html"
+        style="text-decoration: none;">Preserve 3D transform style</a></li>
     </ul>
   </body>
 </html>
