--- a/src/private/scroll14.html
+++ b/src/private/scroll14.html
@@ -1,34 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  </head>
-  <body style="padding-top: 5em;">
-    <table style="
-      background-image: url(dark_1366x854_01_prog.jpg);
-      position: fixed;
-      background-attachment: fixed;
-      background-size: cover;
-      top: 0;
-      left: 0;
-      width: 100%;
-      ">
-      <tr><td>&nbsp;</td></tr>
-      <tr><td>&nbsp;</td></tr>
-      <tr><td>&nbsp;</td></tr>
-      <tr><td>&nbsp;</td></tr>
-      <tr><td>&nbsp;</td></tr>
-    </table>
-    <div style="background: #bfa79b; margin: 100px; padding: 100px;"></div>
-    <div style="background: #bfa79b; margin: 100px; padding: 100px;"></div>
-    <div style="background: #bfa79b; margin: 100px; padding: 100px;"></div>
-    <div style="background: #bfa79b; margin: 100px; padding: 100px;"></div>
-    <div style="background: #bfa79b; margin: 100px; padding: 100px;"></div>
-    <div style="background: #bfa79b; margin: 100px; padding: 100px;"></div>
-    <div style="background: #bfa79b; margin: 100px; padding: 100px;"></div>
-    <div style="background: #bfa79b; margin: 100px; padding: 100px;"></div>
-    <div style="background: #bfa79b; margin: 100px; padding: 100px;"></div>
-    <div style="background: #bfa79b; margin: 100px; padding: 100px;"></div>
-  </body>
-</html>
+﻿<!DOCTYPE HTML>
+<HTML>
+<HEAD>
+  <STYLE>
+  #outerWrapper {
+    width: 100%;
+    position: absolute;
+    background-image: url("berlinskyline_night.jpg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  #innerWrapper {
+    margin: 30px auto;
+    width: 53%;
+    border: 20px solid rgba(51, 51, 72, 0.7);
+  }
+  </STYLE>
+</HEAD>
+<BODY style="margin: 0px;">
+  <TABLE id="outerWrapper">
+    <TR>
+      <TD>
+        <DIV id="innerWrapper">
+          <DIV style="height: 3000px;"></DIV>
+        </DIV>
+      </TD>
+    </TR>
+  </TABLE>
+</BODY>
+</HTML>
