--- a/public/private/scroll14.html
+++ b/public/private/scroll14.html
@@ -1,7 +1,13 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 5em"><table style="background-image: url(dark_1366x854_01_prog.jpg);
-      position: fixed;
-      background-attachment: fixed;
-      background-size: cover;
-      top: 0;
-      left: 0;
-      width: 100%"><tr><td>&nbsp;</td></tr><tr><td>&nbsp;</td></tr><tr><td>&nbsp;</td></tr><tr><td>&nbsp;</td></tr><tr><td>&nbsp;</td></tr></table><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div></body></html>
+<!DOCTYPE HTML><html><head><style>#outerWrapper {
+    width: 100%;
+    position: absolute;
+    background-image: url("berlinskyline_night.jpg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  #innerWrapper {
+    margin: 30px auto;
+    width: 53%;
+    border: 20px solid rgba(51, 51, 72, 0.7);
+  }</style></head><body style="margin: 0px"><table id="outerWrapper"><tr><td><div id="innerWrapper"><div style="height: 3000px"></div></div></td></tr></table></body></html>
