Add a few filters.

--- a/src/private/index.html
+++ b/src/private/index.html
@@ -34,6 +34,8 @@
         style="text-decoration: none;">MIUI reduction</a></li>
       <li><a href="scroll20.html"
         style="text-decoration: none;">Preserve 3D transform style</a></li>
+      <li><a href="scroll01.html"
+        style="text-decoration: none;">CSS Filter Effects</a></li>
     </ul>
   </body>
 </html>
