--- a/src/private/scroll01.html
+++ b/src/private/scroll01.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
   </head>
   <body>
-    <img id="theme" class="defaultTheme" src="transparent-95031.png">
+    <img id="theme" src="transparent-95031.png"
+      style="background-image: url(dark_1366x854_01_prog.jpg);">
     <div id="header-image">
       <img src="transparent-95031.png"
         style="background-image: url(dark_1366x854_01_prog.jpg);">
@@ -45,23 +46,30 @@
       </div>
     </div>
     <div id="myOuterWrapper">
+      <div id="background"></div>
       <div id="myPageWrapper">
         <div class="myColumn">
           <div id="filters">
             <div class="filter">
-              original image
-              <div><img src="berlinskyline_night.jpg"></div>
+              <span>unset</span>
+              <div><img class="unset" src="berlinskyline_night.jpg"></div>
+              <div class="pos-bg">
+                <input id="pos-unset" type="checkbox" class="pos-box">
+                <label for="pos-unset">pos</label>
+                <input id="bg-unset" type="checkbox" class="bg-box">
+                <label for="bg-unset">bg</label>
+              </div>
             </div>
             <div class="filter">
-              blur()
+              <span>blur()</span>
               <div><img class="blur" src="berlinskyline_night.jpg"></div>
             </div>
             <div class="filter">
-              brightness()
+              <span>brightness()</span>
               <div><img class="brightness" src="berlinskyline_night.jpg"></div>
             </div>
             <div class="filter">
-              contrast()
+              <span>contrast()</span>
               <div><img class="contrast" src="berlinskyline_night.jpg"></div>
             </div>
           </div>
