--- a/src/private/scroll01.html
+++ b/src/private/scroll01.html
@@ -63,14 +63,32 @@
             <div class="filter">
               <span>blur()</span>
               <div><img class="blur" src="berlinskyline_night.jpg"></div>
+              <div class="pos-bg">
+                <input id="pos-blur" type="checkbox" class="pos-box">
+                <label for="pos-blur">pos</label>
+                <input id="bg-blur" type="checkbox" class="bg-box">
+                <label for="bg-blur">bg</label>
+              </div>
             </div>
             <div class="filter">
               <span>brightness()</span>
               <div><img class="brightness" src="berlinskyline_night.jpg"></div>
+              <div class="pos-bg">
+                <input id="pos-brightness" type="checkbox" class="pos-box">
+                <label for="pos-brightness">pos</label>
+                <input id="bg-brightness" type="checkbox" class="bg-box">
+                <label for="bg-brightness">bg</label>
+              </div>
             </div>
             <div class="filter">
               <span>contrast()</span>
               <div><img class="contrast" src="berlinskyline_night.jpg"></div>
+              <div class="pos-bg">
+                <input id="pos-contrast" type="checkbox" class="pos-box">
+                <label for="pos-contrast">pos</label>
+                <input id="bg-contrast" type="checkbox" class="bg-box">
+                <label for="bg-contrast">bg</label>
+              </div>
             </div>
           </div>
         </div>
