add more filters

--- a/src/private/scroll01.html
+++ b/src/private/scroll01.html
@@ -90,6 +90,76 @@
                 <label for="bg-contrast">bg</label>
               </div>
             </div>
+            <div class="filter">
+              <span>drop-shadow()</span>
+              <div><img class="drop-shadow" src="berlinskyline_night.jpg"></div>
+              <div class="pos-bg">
+                <input id="pos-drop-shadow" type="checkbox" class="pos-box">
+                <label for="pos-drop-shadow">pos</label>
+                <input id="bg-drop-shadow" type="checkbox" class="bg-box">
+                <label for="bg-drop-shadow">bg</label>
+              </div>
+            </div>
+            <div class="filter">
+              <span>grayscale()</span>
+              <div><img class="grayscale" src="berlinskyline_night.jpg"></div>
+              <div class="pos-bg">
+                <input id="pos-grayscale" type="checkbox" class="pos-box">
+                <label for="pos-grayscale">pos</label>
+                <input id="bg-grayscale" type="checkbox" class="bg-box">
+                <label for="bg-grayscale">bg</label>
+              </div>
+            </div>
+            <div class="filter">
+              <span>hue-rotate()</span>
+              <div><img class="hue-rotate" src="berlinskyline_night.jpg"></div>
+              <div class="pos-bg">
+                <input id="pos-hue-rotate" type="checkbox" class="pos-box">
+                <label for="pos-hue-rotate">pos</label>
+                <input id="bg-hue-rotate" type="checkbox" class="bg-box">
+                <label for="bg-hue-rotate">bg</label>
+              </div>
+            </div>
+            <div class="filter">
+              <span>invert()</span>
+              <div><img class="invert" src="berlinskyline_night.jpg"></div>
+              <div class="pos-bg">
+                <input id="pos-invert" type="checkbox" class="pos-box">
+                <label for="pos-invert">pos</label>
+                <input id="bg-invert" type="checkbox" class="bg-box">
+                <label for="bg-invert">bg</label>
+              </div>
+            </div>
+            <div class="filter">
+              <span>opacity()</span>
+              <div><img class="opacity" src="berlinskyline_night.jpg"></div>
+              <div class="pos-bg">
+                <input id="pos-opacity" type="checkbox" class="pos-box">
+                <label for="pos-opacity">pos</label>
+                <input id="bg-opacity" type="checkbox" class="bg-box">
+                <label for="bg-opacity">bg</label>
+              </div>
+            </div>
+            <div class="filter">
+              <span>saturate()</span>
+              <div><img class="saturate" src="berlinskyline_night.jpg"></div>
+              <div class="pos-bg">
+                <input id="pos-saturate" type="checkbox" class="pos-box">
+                <label for="pos-saturate">pos</label>
+                <input id="bg-saturate" type="checkbox" class="bg-box">
+                <label for="bg-saturate">bg</label>
+              </div>
+            </div>
+            <div class="filter">
+              <span>sepia()</span>
+              <div><img class="sepia" src="berlinskyline_night.jpg"></div>
+              <div class="pos-bg">
+                <input id="pos-sepia" type="checkbox" class="pos-box">
+                <label for="pos-sepia">pos</label>
+                <input id="bg-sepia" type="checkbox" class="bg-box">
+                <label for="bg-sepia">bg</label>
+              </div>
+            </div>
           </div>
         </div>
         <div id="myColumns">
