add blur animation

--- a/src/private/scroll01.html
+++ b/src/private/scroll01.html
@@ -64,6 +64,8 @@
               <span>blur()</span>
               <div><img class="blur" src="berlinskyline_night.jpg"></div>
               <div class="pos-bg">
+                <input id="anim-blur" type="checkbox" class="anim-box">
+                <label for="anim-blur">anim</label>
                 <input id="pos-blur" type="checkbox" class="pos-box">
                 <label for="pos-blur">pos</label>
                 <input id="bg-blur" type="checkbox" class="bg-box">
