--- a/src/private/scroll01.html
+++ b/src/private/scroll01.html
@@ -76,6 +76,8 @@
               <span>brightness()</span>
               <div><img class="brightness" src="berlinskyline_night.jpg"></div>
               <div class="pos-bg">
+                <input id="anim-brightness" type="checkbox" class="anim-box">
+                <label for="anim-brightness">anim</label>
                 <input id="pos-brightness" type="checkbox" class="pos-box">
                 <label for="pos-brightness">pos</label>
                 <input id="bg-brightness" type="checkbox" class="bg-box">
@@ -86,6 +88,8 @@
               <span>contrast()</span>
               <div><img class="contrast" src="berlinskyline_night.jpg"></div>
               <div class="pos-bg">
+                <input id="anim-contrast" type="checkbox" class="anim-box">
+                <label for="anim-contrast">anim</label>
                 <input id="pos-contrast" type="checkbox" class="pos-box">
                 <label for="pos-contrast">pos</label>
                 <input id="bg-contrast" type="checkbox" class="bg-box">
@@ -96,6 +100,8 @@
               <span>drop-shadow()</span>
               <div><img class="drop-shadow" src="berlinskyline_night.jpg"></div>
               <div class="pos-bg">
+                <input id="anim-drop-shadow" type="checkbox" class="anim-box">
+                <label for="anim-drop-shadow">anim</label>
                 <input id="pos-drop-shadow" type="checkbox" class="pos-box">
                 <label for="pos-drop-shadow">pos</label>
                 <input id="bg-drop-shadow" type="checkbox" class="bg-box">
@@ -106,6 +112,8 @@
               <span>grayscale()</span>
               <div><img class="grayscale" src="berlinskyline_night.jpg"></div>
               <div class="pos-bg">
+                <input id="anim-grayscale" type="checkbox" class="anim-box">
+                <label for="anim-grayscale">anim</label>
                 <input id="pos-grayscale" type="checkbox" class="pos-box">
                 <label for="pos-grayscale">pos</label>
                 <input id="bg-grayscale" type="checkbox" class="bg-box">
@@ -116,6 +124,8 @@
               <span>hue-rotate()</span>
               <div><img class="hue-rotate" src="berlinskyline_night.jpg"></div>
               <div class="pos-bg">
+                <input id="anim-hue-rotate" type="checkbox" class="anim-box">
+                <label for="anim-hue-rotate">anim</label>
                 <input id="pos-hue-rotate" type="checkbox" class="pos-box">
                 <label for="pos-hue-rotate">pos</label>
                 <input id="bg-hue-rotate" type="checkbox" class="bg-box">
@@ -126,6 +136,8 @@
               <span>invert()</span>
               <div><img class="invert" src="berlinskyline_night.jpg"></div>
               <div class="pos-bg">
+                <input id="anim-invert" type="checkbox" class="anim-box">
+                <label for="anim-invert">anim</label>
                 <input id="pos-invert" type="checkbox" class="pos-box">
                 <label for="pos-invert">pos</label>
                 <input id="bg-invert" type="checkbox" class="bg-box">
@@ -136,6 +148,8 @@
               <span>opacity()</span>
               <div><img class="opacity" src="berlinskyline_night.jpg"></div>
               <div class="pos-bg">
+                <input id="anim-opacity" type="checkbox" class="anim-box">
+                <label for="anim-opacity">anim</label>
                 <input id="pos-opacity" type="checkbox" class="pos-box">
                 <label for="pos-opacity">pos</label>
                 <input id="bg-opacity" type="checkbox" class="bg-box">
@@ -146,6 +160,8 @@
               <span>saturate()</span>
               <div><img class="saturate" src="berlinskyline_night.jpg"></div>
               <div class="pos-bg">
+                <input id="anim-saturate" type="checkbox" class="anim-box">
+                <label for="anim-saturate">anim</label>
                 <input id="pos-saturate" type="checkbox" class="pos-box">
                 <label for="pos-saturate">pos</label>
                 <input id="bg-saturate" type="checkbox" class="bg-box">
@@ -156,6 +172,8 @@
               <span>sepia()</span>
               <div><img class="sepia" src="berlinskyline_night.jpg"></div>
               <div class="pos-bg">
+                <input id="anim-sepia" type="checkbox" class="anim-box">
+                <label for="anim-sepia">anim</label>
                 <input id="pos-sepia" type="checkbox" class="pos-box">
                 <label for="pos-sepia">pos</label>
                 <input id="bg-sepia" type="checkbox" class="bg-box">
