--- a/src/private/index.html
+++ b/src/private/index.html
@@ -36,6 +36,8 @@
         style="text-decoration: none;">Preserve 3D transform style</a></li>
       <li><a href="scroll01.html"
         style="text-decoration: none;">CSS Filter Effects</a></li>
+      <li><a href="filter01.html"
+        style="text-decoration: none;">Dependent hue-rotate effect</a></li>
     </ul>
   </body>
 </html>
