add filter02.html and filter03.html

--- a/src/private/index.html
+++ b/src/private/index.html
@@ -38,6 +38,10 @@
         style="text-decoration: none;">CSS Filter Effects</a></li>
       <li><a href="filter01.html"
         style="text-decoration: none;">Dependent hue-rotate effect</a></li>
+      <li><a href="filter02.html"
+        style="text-decoration: none;">Fixed-bg and sepia effect</a></li>
+      <li><a href="filter03.html"
+        style="text-decoration: none;">Fixed-bg and effect removed</a></li>
     </ul>
   </body>
 </html>
