--- a/src/private/index.html
+++ b/src/private/index.html
@@ -41,7 +41,7 @@
       <li><a href="filter02.html"
         style="text-decoration: none;">Fixed-bg and sepia effect</a></li>
       <li><a href="filter03.html"
-        style="text-decoration: none;">Fixed-bg and effect removed</a></li>
+        style="text-decoration: none;">Fixed-bg and effect unset</a></li>
     </ul>
   </body>
 </html>
