--- a/public/private/filter03.html
+++ b/public/private/filter03.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>#bg {
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>.unset {
+      -webkit-filter: unset;
+      filter: unset;
+    }
+    #bg {
       position: fixed;
       background-image: url(bg.jpg);
       background-size: cover;
@@ -12,4 +16,4 @@
       margin-top: 200px;
       padding-top: 200px;
       opacity: 0.3;
-    }</style></head><body><div id="bg"></div><div class="content"></div><div class="content"></div><div class="content"></div><div class="content"></div><div class="content"></div><div class="content"></div><div class="content"></div><div class="content"></div><div class="content"></div><div class="content"></div></body></html>
+    }</style></head><body><div id="bg" class="unset"></div><div class="content"></div><div class="content"></div><div class="content"></div><div class="content"></div><div class="content"></div><div class="content"></div><div class="content"></div><div class="content"></div><div class="content"></div><div class="content"></div></body></html>
