toggle theme image

--- a/src/private/scroll01.html
+++ b/src/private/scroll01.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
   </head>
   <body>
-    <img id="theme" src="transparent-95031.png"
+    <img id="theme" src="transparent-95031.png" class="hidden"
       style="background-image: url(dark_1366x854_01_prog.jpg);">
     <div id="header-image">
       <img src="transparent-95031.png"
