remove a few images

--- a/public/private/scroll03.html
+++ b/public/private/scroll03.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px"><div style="background-image: url(dark_1366x854_01_prog.jpg);
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px"><div style="background-image: url(bg.jpg);
       position: fixed;
       background-attachment: scroll;
       background-size: cover;
