--- a/public/private/scroll05.html
+++ b/public/private/scroll05.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="margin: 0px"><div style="background-image: url(berlinskyline_night.jpg);
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="margin: 0px"><div style="background-image: url(bg.jpg);
       position: relative;
       background-attachment: fixed;
       background-size: cover;
