--- a/public/private/scroll06.html
+++ b/public/private/scroll06.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px"><div style="background-image: url(dark_1366x854_01_prog.jpg);
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px"><div style="background-image: url(bg.jpg);
       position: fixed;
       z-index: 1;
       background-attachment: scroll;
@@ -10,13 +10,13 @@
       margin: 100px;
       padding: 100px;
       position:relative;
-      background-image: url(berlinskyline_night.jpg);
+      background-image: url(bg.jpg);
       background-attachment: fixed;
       background-size: cover"></div><div style="background: #bfa79b; margin: 100px; padding: 100px; position:relative"></div><div style="background: #bfa79b; margin: 100px; padding: 100px; position:relative"></div><div style="background: #bfa79b; margin: 100px; padding: 100px; position:relative"></div><div style="background: #bfa79b; margin: 100px; padding: 100px; position:relative"></div><div style="background: #bfa79b; margin: 100px; padding: 100px; position:relative"></div><div style="background: #9bbfa7;
       margin: 100px;
       padding: 100px;
       position:relative;
       z-index: 2;
-      background-image: url(berlinskyline_night.jpg);
+      background-image: url(bg.jpg);
       background-attachment: fixed;
       background-size: cover"></div><div style="background: #bfa79b; margin: 100px; padding: 100px; position:relative"></div><div style="background: #bfa79b; margin: 100px; padding: 100px; position:relative"></div><div style="background: #bfa79b; margin: 100px; padding: 100px; position:relative"></div><div style="background: #bfa79b; margin: 100px; padding: 100px; position:relative"></div><div style="background: #bfa79b; margin: 100px; padding: 100px; position:relative"></div></body></html>
