--- a/public/private/scroll14.html
+++ b/public/private/scroll14.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML><html><head><style>#outerWrapper {
     width: 100%;
     position: absolute;
-    background-image: url("berlinskyline_night.jpg");
+    background-image: url("bg.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
