--- a/public/private/scroll18.html
+++ b/public/private/scroll18.html
@@ -7,7 +7,7 @@
       left: 0;
       width: 100%;
       padding-top: 20px;
-      background-color: #fff"><div><nav>&nbsp;</nav><h1>&nbsp;</h1></div></header><main style="overflow-x: hidden"><section id="slide-3" style="height: 1099px"><div id="bcg-3" style="background-image: url('berlinskyline_night.jpg');
+      background-color: #fff"><div><nav>&nbsp;</nav><h1>&nbsp;</h1></div></header><main style="overflow-x: hidden"><section id="slide-3" style="height: 1099px"><div id="bcg-3" style="background-image: url('bg.jpg');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
@@ -18,7 +18,7 @@
                 left: 0px;
                 top: 206px;
                 width: 100%"><h2 style="font-size: 45px;
-                  color: #ffffff">Fixed Element</h2></div></div></div></div></section><section id="slide" style="height: 1099px"><div id="bcg" style="background-image: url('dark_1366x854_01_prog.jpg');
+                  color: #ffffff">Fixed Element</h2></div></div></div></div></section><section id="slide" style="height: 1099px"><div id="bcg" style="background-image: url('bg.jpg');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
