--- a/src/private/scroll01.html
+++ b/src/private/scroll01.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <img id="theme" src="transparent-95031.png" class="hidden"
-      style="background-image: url(dark_1366x854_01_prog.jpg);">
+      style="background-image: url(bg.jpg);">
     <div id="header-image">
       <img src="transparent-95031.png"
-        style="background-image: url(dark_1366x854_01_prog.jpg);">
+        style="background-image: url(bg.jpg);">
     </div>
     <div id="hdnav">
       <div id="UH">
@@ -52,7 +52,7 @@
           <div id="filters">
             <div class="filter">
               <span>unset</span>
-              <div><img class="unset" src="berlinskyline_night.jpg"></div>
+              <div><img class="unset" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="pos-unset" type="checkbox" class="pos-box">
                 <label for="pos-unset">pos</label>
@@ -62,7 +62,7 @@
             </div>
             <div class="filter">
               <span>blur()</span>
-              <div><img class="blur" src="berlinskyline_night.jpg"></div>
+              <div><img class="blur" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-blur" type="checkbox" class="anim-box">
                 <label for="anim-blur">anim</label>
@@ -74,7 +74,7 @@
             </div>
             <div class="filter">
               <span>brightness()</span>
-              <div><img class="brightness" src="berlinskyline_night.jpg"></div>
+              <div><img class="brightness" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-brightness" type="checkbox" class="anim-box">
                 <label for="anim-brightness">anim</label>
@@ -86,7 +86,7 @@
             </div>
             <div class="filter">
               <span>contrast()</span>
-              <div><img class="contrast" src="berlinskyline_night.jpg"></div>
+              <div><img class="contrast" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-contrast" type="checkbox" class="anim-box">
                 <label for="anim-contrast">anim</label>
@@ -98,7 +98,7 @@
             </div>
             <div class="filter">
               <span>drop-shadow()</span>
-              <div><img class="drop-shadow" src="berlinskyline_night.jpg"></div>
+              <div><img class="drop-shadow" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-drop-shadow" type="checkbox" class="anim-box">
                 <label for="anim-drop-shadow">anim</label>
@@ -110,7 +110,7 @@
             </div>
             <div class="filter">
               <span>grayscale()</span>
-              <div><img class="grayscale" src="berlinskyline_night.jpg"></div>
+              <div><img class="grayscale" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-grayscale" type="checkbox" class="anim-box">
                 <label for="anim-grayscale">anim</label>
@@ -122,7 +122,7 @@
             </div>
             <div class="filter">
               <span>hue-rotate()</span>
-              <div><img class="hue-rotate" src="berlinskyline_night.jpg"></div>
+              <div><img class="hue-rotate" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-hue-rotate" type="checkbox" class="anim-box">
                 <label for="anim-hue-rotate">anim</label>
@@ -134,7 +134,7 @@
             </div>
             <div class="filter">
               <span>invert()</span>
-              <div><img class="invert" src="berlinskyline_night.jpg"></div>
+              <div><img class="invert" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-invert" type="checkbox" class="anim-box">
                 <label for="anim-invert">anim</label>
@@ -146,7 +146,7 @@
             </div>
             <div class="filter">
               <span>opacity()</span>
-              <div><img class="opacity" src="berlinskyline_night.jpg"></div>
+              <div><img class="opacity" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-opacity" type="checkbox" class="anim-box">
                 <label for="anim-opacity">anim</label>
@@ -158,7 +158,7 @@
             </div>
             <div class="filter">
               <span>saturate()</span>
-              <div><img class="saturate" src="berlinskyline_night.jpg"></div>
+              <div><img class="saturate" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-saturate" type="checkbox" class="anim-box">
                 <label for="anim-saturate">anim</label>
@@ -170,7 +170,7 @@
             </div>
             <div class="filter">
               <span>sepia()</span>
-              <div><img class="sepia" src="berlinskyline_night.jpg"></div>
+              <div><img class="sepia" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-sepia" type="checkbox" class="anim-box">
                 <label for="anim-sepia">anim</label>
