--- a/src/private/scroll02.html
+++ b/src/private/scroll02.html
@@ -7,7 +7,7 @@
   <body style="padding-top: 100px;">
     <img id="theme" src="transparent-95031.png" style="
       position: fixed;
-      background-image: url(dark_1366x854_01_prog.jpg);
+      background-image: url(bg.jpg);
       background-size: cover;
       top: 0;
       left: 0;
@@ -29,7 +29,7 @@
       <div style="background: #bfa79b; margin: 100px; padding: 100px;"></div>
     </div>
     <div style="
-      background-image: url(dark_1366x854_01_prog.jpg);
+      background-image: url(bg.jpg);
       position: fixed;
       background-attachment: fixed;
       background-size: cover;
