--- a/src/private/scroll06.html
+++ b/src/private/scroll06.html
@@ -6,7 +6,7 @@
   </head>
   <body style="padding-top: 100px;">
     <div style="
-      background-image: url(dark_1366x854_01_prog.jpg);
+      background-image: url(bg.jpg);
       position: fixed;
       z-index: 1;
       background-attachment: scroll;
@@ -28,7 +28,7 @@
       margin: 100px;
       padding: 100px;
       position:relative;
-      background-image: url(berlinskyline_night.jpg);
+      background-image: url(bg.jpg);
       background-attachment: fixed;
       background-size: cover;
       ">
@@ -46,7 +46,7 @@
       padding: 100px;
       position:relative;
       z-index: 2;
-      background-image: url(berlinskyline_night.jpg);
+      background-image: url(bg.jpg);
       background-attachment: fixed;
       background-size: cover;
       ">
