--- a/src/private/scroll11.html
+++ b/src/private/scroll11.html
@@ -6,7 +6,7 @@
   </head>
   <body style="padding-top: 100px;">
     <img id="theme" src="transparent-95031.png" style="
-      background-image: url(dark_1366x854_01_prog.jpg);
+      background-image: url(bg.jpg);
       position: fixed;
       background-size: cover;
       top: 0;
@@ -15,7 +15,7 @@
       height: 100%;
       ">
     <div id="header-image" style="
-      background-image: url(dark_1366x854_01_prog.jpg);
+      background-image: url(bg.jpg);
       position: fixed;
       background-attachment: fixed;
       background-size: cover;
