--- a/src/private/scroll12.html
+++ b/src/private/scroll12.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <img id="theme" src="transparent-95031.png"
-      style="background-image: url(dark_1366x854_01_prog.jpg);">
+      style="background-image: url(bg.jpg);">
     <div id="header-image">
       <img src="transparent-95031.png"
-        style="background-image: url(dark_1366x854_01_prog.jpg);">
+        style="background-image: url(bg.jpg);">
     </div>
     <div id="hdnav">
       <div id="UH">
