--- a/src/private/scroll13.html
+++ b/src/private/scroll13.html
@@ -7,7 +7,7 @@
   <body>
     <div style="height: 2000px">
       <div style="
-        background-image: url('berlinskyline_night.jpg'), url('dark_1366x854_01_prog.jpg');
+        background-image: url('bg.jpg'), url('bg.jpg');
         background-attachment: fixed;
         background-clip: content-box, border-box;
         background-repeat: no-repeat;
