--- a/src/private/scroll17.html
+++ b/src/private/scroll17.html
@@ -7,7 +7,7 @@
   <body style="padding-top: 100px;">
     <img id="theme" src="transparent-95031.png" style="
       position: fixed;
-      background-image: url(dark_1366x854_01_prog.jpg);
+      background-image: url(bg.jpg);
       background-size: cover;
       top: 0;
       left: 0;
@@ -24,7 +24,7 @@
       clip: rect(0,auto,100px,0);
       ">
       <img src="transparent-95031.png" style="
-        background-image: url(dark_1366x854_01_prog.jpg);
+        background-image: url(bg.jpg);
         background-attachment: fixed;
         background-size: cover;
         width: 100%;
