--- a/public/private/scroll02.html
+++ b/public/private/scroll02.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px"><img id="theme" src="transparent-95031.png" style="position: fixed;
-      background-image: url(dark_1366x854_01_prog.jpg);
+      background-image: url(bg.jpg);
       background-size: cover;
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%"><div id="myContent" style="position: relative"><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div></div><div style="background-image: url(dark_1366x854_01_prog.jpg);
+      height: 100%"><div id="myContent" style="position: relative"><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div><div style="background: #bfa79b; margin: 100px; padding: 100px"></div></div><div style="background-image: url(bg.jpg);
       position: fixed;
       background-attachment: fixed;
       background-size: cover;
