--- a/public/private/scroll07.html
+++ b/public/private/scroll07.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="margin: 0px"><img style="position: fixed; width: 100%; height: 100%" src="dark_1366x854_01_prog.jpg"><div style="position: relative; height: 3000px; background-color: yellow; width: 160px"><div style="position: relative; z-index: 1; height: 140px"></div><div id="counter" style="position: relative;
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="margin: 0px"><img style="position: fixed; width: 100%; height: 100%" src="bg.jpg"><div style="position: relative; height: 3000px; background-color: yellow; width: 160px"><div style="position: relative; z-index: 1; height: 140px"></div><div id="counter" style="position: relative;
         top: -140px;
         width: 160px;
         height: 140px;
@@ -8,7 +8,7 @@
         background-color: cyan;
         font-family: Helvetica, Arial;
         font-size: 24pt;
-        cursor: pointer">0</div></div><div style="top: 0px; position: absolute"><img src="bottomImage.jpg"></div><script src="http://code.jquery.com/jquery-1.11.2.min.js"></script><script>var count = 0;
+        cursor: pointer">0</div></div><div style="top: 0px; position: absolute"><img src="../images/wood.gif" width="160" height="140"></div><script src="http://code.jquery.com/jquery-1.11.2.min.js"></script><script>var count = 0;
       $(function() {
         var $counter = $('#counter');
         var setCounterPosition = function() {
