--- a/public/private/scroll11.html
+++ b/public/private/scroll11.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px"><img id="theme" src="transparent-95031.png" style="background-image: url(dark_1366x854_01_prog.jpg);
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px"><img id="theme" src="transparent-95031.png" style="background-image: url(bg.jpg);
       position: fixed;
       background-size: cover;
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%"><div id="header-image" style="background-image: url(dark_1366x854_01_prog.jpg);
+      height: 100%"><div id="header-image" style="background-image: url(bg.jpg);
       position: fixed;
       background-attachment: fixed;
       background-size: cover;
