--- a/public/private/scroll17.html
+++ b/public/private/scroll17.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="padding-top: 100px"><img id="theme" src="transparent-95031.png" style="position: fixed;
-      background-image: url(dark_1366x854_01_prog.jpg);
+      background-image: url(bg.jpg);
       background-size: cover;
       top: 0;
       left: 0;
@@ -10,7 +10,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      clip: rect(0,auto,100px,0)"><img src="transparent-95031.png" style="background-image: url(dark_1366x854_01_prog.jpg);
+      clip: rect(0,auto,100px,0)"><img src="transparent-95031.png" style="background-image: url(bg.jpg);
         background-attachment: fixed;
         background-size: cover;
         width: 100%;
