--- a/src/private/scroll04.html
+++ b/src/private/scroll04.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body style="margin: 0px">
-    <img id="intersected" src="dark_1366x854_01_prog.jpg" style="
+    <img id="intersected" src="bg.jpg" style="
       position: fixed;
       width: 100%;
       height: 100%;
@@ -30,7 +30,7 @@
       top: 0px;
       left: 20%;
       ">
-      <img src="bottomImage.jpg" />
+      <img src="../images/wood.gif" width="160" height="140" />
     </div>
   </body>
 </html>
