--- a/src/private/scroll05.html
+++ b/src/private/scroll05.html
@@ -6,7 +6,7 @@
   </head>
   <body style="margin: 0px;">
     <div style="
-      background-image: url(berlinskyline_night.jpg);
+      background-image: url(bg.jpg);
       position: relative;
       background-attachment: fixed;
       background-size: cover;
