--- a/src/private/scroll07.html
+++ b/src/private/scroll07.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body style="margin: 0px">
-    <img style="position: fixed; width: 100%; height: 100%" src="dark_1366x854_01_prog.jpg"/>
+    <img style="position: fixed; width: 100%; height: 100%" src="bg.jpg"/>
     <div style="position: relative; height: 3000px; background-color: yellow; width: 160px">
       <div style="position: relative; z-index: 1; height: 140px"></div>
       <div id="counter" style="
@@ -23,7 +23,7 @@
       ">0</div>
     </div>
     <div style="top: 0px; position: absolute">
-      <img src="bottomImage.jpg" />
+      <img src="../images/wood.gif" width="160" height="140" />
     </div>
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script>
