--- a/src/private/scroll10.html
+++ b/src/private/scroll10.html
@@ -32,7 +32,7 @@
       ">
       <section id="slide-3" style="height: 1099px">
         <div id="bcg-3" style="
-          background-image: url('berlinskyline_night.jpg');
+          background-image: url('bg.jpg');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
@@ -65,7 +65,7 @@
       </section>
       <section id="slide" style="height: 1099px">
         <div id="bcg" style="
-          background-image: url('dark_1366x854_01_prog.jpg');
+          background-image: url('bg.jpg');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
