--- a/src/private/scroll14.html
+++ b/src/private/scroll14.html
@@ -5,7 +5,7 @@
   #outerWrapper {
     width: 100%;
     position: absolute;
-    background-image: url("berlinskyline_night.jpg");
+    background-image: url("bg.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
