--- a/src/private/scroll15.html
+++ b/src/private/scroll15.html
@@ -6,7 +6,7 @@
   </head>
   <body style="padding-top: 100px;">
     <div style="
-      background-image: url(dark_1366x854_01_prog.jpg);
+      background-image: url(bg.jpg);
       position: fixed;
       background-attachment: fixed;
       background-size: cover;
