--- a/src/private/index.html
+++ b/src/private/index.html
@@ -42,6 +42,8 @@
         style="text-decoration: none;">Fixed-bg and sepia effect</a></li>
       <li><a href="filter03.html"
         style="text-decoration: none;">Fixed-bg and effect unset</a></li>
+      <li><a href="filter04.html"
+        style="text-decoration: none;">Blur on container, inline element and in table</a></li>
     </ul>
   </body>
 </html>
