--- a/src/private/filter04.html
+++ b/src/private/filter04.html
@@ -46,15 +46,15 @@
     <section>
       <img src="../images/wood.gif" class="blur float">
       <h3>
-        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/filter#blur()">blur()</a>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/filter#blur()" class="blur">blur()</a>
       </h3>
       <p>Applies a Gaussian <span class="blur">blur</span> to the input image. The value of ‘radius’ defines the value of the standard deviation to the Gaussian function, or how many pixels on the screen blend into each other, so a larger value will create more <span class="blur">blur</span>. If no parameter is provided, then a value 0 is used. The parameter is specified as a CSS length, but does not accept percentage values.</p>
     </section>
     <section>
       <table>
         <tr>
-          <td valign="top">
-            <img src="../images/wood.gif" class="blur">
+          <td valign="top" class="blur">
+            <img src="../images/wood.gif">
           </td>
           <td valign="top" class="blur">
             <h3 class="top">
@@ -64,5 +64,23 @@
           </td>
         </tr>
       </table>
+    </section>
+    <section>
+      <table>
+        <tr>
+          <td valign="top">
+            <img src="../images/wood.gif" class="blur">
+          </td>
+          <td valign="top">
+            <div class="blur">
+              <h3 class="top">
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/filter#blur()">blur()</a>
+              </h3>
+              <p>Applies a Gaussian blur to the input image. The value of ‘radius’ defines the value of the standard deviation to the Gaussian function, or how many pixels on the screen blend into each other, so a larger value will create more blur. If no parameter is provided, then a value 0 is used. The parameter is specified as a CSS length, but does not accept percentage values.</p>
+            </div>
+          </td>
+        </tr>
+      </table>
+    </section>
   </body>
 </html>
