for better browser support

--- a/src/private/scroll01.html
+++ b/src/private/scroll01.html
@@ -186,23 +186,13 @@
               </filter>
             </svg>
             <div class="filter">
-              <span>url(#turbulence)</span>
-              <div><img class="turbulence" src="transparent-95031.png"></div>
+              <span>url()</span>
+              <div><img class="url" src="transparent-95031.png"></div>
               <div class="pos-bg">
-                <input id="pos-turbulence" type="checkbox" class="pos-box">
-                <label for="pos-turbulence">pos</label>
-                <input id="bg-turbulence" type="checkbox" class="bg-box">
-                <label for="bg-turbulence">bg</label>
-              </div>
-            </div>
-            <div class="filter">
-              <span>url(filters.svg#fractalNoise)</span>
-              <div><img class="fractal-noise" src="transparent-95031.png"></div>
-              <div class="pos-bg">
-                <input id="pos-fractal-noise" type="checkbox" class="pos-box">
-                <label for="pos-fractal-noise">pos</label>
-                <input id="bg-fractal-noise" type="checkbox" class="bg-box">
-                <label for="bg-fractal-noise">bg</label>
+                <input id="pos-url" type="checkbox" class="pos-box">
+                <label for="pos-url">pos</label>
+                <input id="bg-url" type="checkbox" class="bg-box">
+                <label for="bg-url">bg</label>
               </div>
             </div>
           </div>
