--- a/src/private/scroll01.html
+++ b/src/private/scroll01.html
@@ -180,14 +180,9 @@
                 <label for="bg-sepia">bg</label>
               </div>
             </div>
-            <svg xmlns="http://www.w3.org/2000/svg" class="hidden">
-              <filter id="turbulence" filterUnits="objectBoundingBox" x="0%" y="0%" width="100%" height="100%">
-                <feTurbulence type="turbulence" baseFrequency="0.1" numOctaves="1" />
-              </filter>
-            </svg>
             <div class="filter">
               <span>url()</span>
-              <div><img class="url" src="transparent-95031.png"></div>
+              <div><img class="url" src="transparent-95031.png" style="filter: url(#turbulence); /* for Firefox */"></div>
               <div class="pos-bg">
                 <input id="pos-url" type="checkbox" class="pos-box">
                 <label for="pos-url">pos</label>
@@ -205,6 +200,11 @@
         </div>
       </div>
     </div>
+    <svg xmlns="http://www.w3.org/2000/svg" height="0">
+      <filter id="turbulence" filterUnits="objectBoundingBox" x="0%" y="0%" width="100%" height="100%">
+        <feTurbulence type="turbulence" baseFrequency="0.1" numOctaves="1" />
+      </filter>
+    </svg>
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script async src="script.js"></script>
   </body>
