--- a/src/private/filter04.html
+++ b/src/private/filter04.html
@@ -8,6 +8,10 @@
       -webkit-filter: blur(5px);
       filter: blur(5px);
     }
+    .blur-grayscale {
+      -webkit-filter: blur(5px) grayscale(100%);
+      filter: blur(5px) grayscale(100%);
+    }
     .float {
       float: left;
     }
@@ -36,7 +40,7 @@
     </style>
   </head>
   <body>
-    <section class="blur">
+    <section class="blur-grayscale">
       <img src="../images/wood.gif" class="float">
       <h3>
         <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/filter#blur()">blur()</a>
@@ -44,7 +48,7 @@
       <p>Applies a Gaussian blur to the input image. The value of ‘radius’ defines the value of the standard deviation to the Gaussian function, or how many pixels on the screen blend into each other, so a larger value will create more blur. If no parameter is provided, then a value 0 is used. The parameter is specified as a CSS length, but does not accept percentage values.</p>
     </section>
     <section>
-      <img src="../images/wood.gif" class="blur float">
+      <img src="../images/wood.gif" class="blur-grayscale float">
       <h3>
         <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/filter#blur()" class="blur">blur()</a>
       </h3>
@@ -53,7 +57,7 @@
     <section>
       <table>
         <tr>
-          <td valign="top" class="blur">
+          <td valign="top" class="blur-grayscale">
             <img src="../images/wood.gif">
           </td>
           <td valign="top" class="blur">
@@ -69,7 +73,7 @@
       <table>
         <tr>
           <td valign="top">
-            <img src="../images/wood.gif" class="blur">
+            <img src="../images/wood.gif" class="blur-grayscale">
           </td>
           <td valign="top">
             <div class="blur">
