--- a/src/private/scroll01.html
+++ b/src/private/scroll01.html
@@ -191,15 +191,15 @@
               </div>
             </div>
             <div class="filter">
-              <span>SVG</span>
+              <span>SVG filter = url()</span>
               <div>
-                <svg xmlns="http://www.w3.org/2000/svg" width="288" height="288">
+                <svg xmlns="http://www.w3.org/2000/svg">
                   <defs>
                     <filter id="turbulence" filterUnits="objectBoundingBox" x="0%" y="0%" width="100%" height="100%">
                       <feTurbulence type="turbulence" baseFrequency="0.1" numOctaves="1" />
                     </filter>
                   </defs>
-                  <rect width="288" height="288" filter="url(#turbulence)" />
+                  <rect width="100%" height="100%" filter="url(#turbulence)" />
                 </svg>
               </div>
               <div class="pos-bg">
