--- a/public/private/scroll07.html
+++ b/public/private/scroll07.html
@@ -1,22 +1,23 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"></head><body style="margin: 0px"><img style="position: fixed; width: 100%; height: 100%" src="bg.jpg"><div style="position: relative; height: 3000px; background-color: yellow; width: 160px"><div style="position: relative; z-index: 1; height: 140px"></div><div id="counter" style="position: relative;
-        top: -140px;
-        width: 160px;
-        height: 140px;
-        line-height: 140px;
-        vertical-align: middle;
-        text-align: center;
-        background-color: cyan;
-        font-family: Helvetica, Arial;
-        font-size: 24pt;
-        cursor: pointer">0</div></div><div style="top: 0px; position: absolute"><img src="../images/wood.gif" width="160" height="140"></div><script src="http://code.jquery.com/jquery-1.11.2.min.js"></script><script>var count = 0;
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>#counter, #wheel {
+      width: 160px;
+      height: 140px;
+      line-height: 140px;
+      vertical-align: middle;
+      text-align: center;
+      font-family: Helvetica, Arial;
+      font-size: 24pt;
+      cursor: pointer;
+    }</style></head><body style="margin: 0px"><img style="position: fixed; width: 100%; height: 100%" src="bg.jpg"><div style="position: relative; height: 3000px; background-color: yellow; width: 160px"><div style="position: relative; z-index: 1; height: 140px"></div><div id="counter" style="position: relative; top: -140px; background: cyan">0</div></div><div id="wheel" style="position: fixed; top: 0px; background: lightgreen"></div><script src="http://code.jquery.com/jquery-1.11.2.min.js"></script><script>var count = 0;
+      var wheel = (-1);
       $(function() {
         var $counter = $('#counter');
+        var $wheel = $('#wheel');
         var setCounterPosition = function() {
           var top = $(window).height() - 280;
-          if ($(document).scrollTop() - 140 < top) {
+          if ($(document).scrollTop() < top) {
             $counter.css({'position': 'relative', 'top': top + 'px'});
           } else {
-            $counter.css({'position': 'fixed', 'top': '0px'});
+            $counter.css({'position': 'fixed', 'top': '140px'});
           }
         };
         $(window).scroll(function() {
@@ -25,6 +26,14 @@
         });
         $counter.click(function() {
           $counter.text(count = 0);
+        });
+        $wheel.click(function() {
+          if (wheel < 0) {
+            $(window).on('wheel', function() {
+              $wheel.text(++wheel);
+            });
+          }
+          $wheel.text(wheel = 0);
         });
         setCounterPosition();
       });</script></body></html>
