--- a/public/private/scroll07.html
+++ b/public/private/scroll07.html
@@ -9,6 +9,7 @@
       cursor: pointer;
     }</style></head><body style="margin: 0px"><img style="position: fixed; width: 100%; height: 100%" src="bg.jpg"><div style="position: relative; height: 3000px; background-color: yellow; width: 160px"><div style="position: relative; z-index: 1; height: 140px"></div><div id="counter" style="position: relative; top: -140px; background: cyan">0</div></div><div id="wheel" style="position: fixed; top: 0px; background: lightgreen"></div><script src="http://code.jquery.com/jquery-1.11.2.min.js"></script><script>var count = 0;
       var wheel = (-1);
+      var prevent = false;
       $(function() {
         var $counter = $('#counter');
         var $wheel = $('#wheel');
@@ -29,9 +30,15 @@
         });
         $wheel.click(function() {
           if (wheel < 0) {
-            $(window).on('wheel', function() {
-              $wheel.text(++wheel);
+            $(window).on('wheel', function(event) {
+              if (prevent) {
+                event.preventDefault();
+              } else {
+                $wheel.text(++wheel);
+              }
             });
+          } else {
+            prevent = !prevent;
           }
           $wheel.text(wheel = 0);
         });
