--- a/src/private/scroll01.html
+++ b/src/private/scroll01.html
@@ -191,9 +191,11 @@
             </div>
             <div class="filter">
               <div>
-                <video class="target sepia" controls>
-                  <source src="trail.mp4" type="video/mp4">
-                </video>
+                <a href="http://www.w3schools.com/html/html5_video.asp" target="_blank">
+                  <video class="target sepia" controls title="Courtesy of W3Schools.">
+                    <source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+                  </video>
+                </a>
               </div>
               <div class="pos-bg">
                 <input id="anim-sepia-video" data="anim-sepia" type="checkbox" class="anim-box">
