--- a/public/private/scroll07.html
+++ b/public/private/scroll07.html
@@ -7,15 +7,15 @@
       font-family: Helvetica, Arial;
       font-size: 24pt;
       cursor: pointer;
-    }</style></head><body style="margin: 0px"><img style="position: fixed; width: 100%; height: 100%" src="bg.jpg"><div style="position: relative; height: 3000px; background-color: yellow; width: 160px"><div style="position: relative; z-index: 1; height: 140px"></div><div id="counter" style="position: relative; top: -140px; background: cyan">0</div></div><div id="wheel" style="position: fixed; top: 0px; background: lightgreen"></div><script src="http://code.jquery.com/jquery-1.11.2.min.js"></script><script>var count = 0;
+    }</style></head><body style="margin: 0px"><img style="position: fixed; width: 100%; height: 100%" src="bg.jpg"><div style="position: relative; height: 3000px; background-color: yellow; width: 160px"><div id="counter" style="position: relative; background: cyan">0</div></div><div id="wheel" style="position: fixed; top: 0px; background: lightgreen"></div><script src="http://code.jquery.com/jquery-1.11.2.min.js"></script><script>var count = 0;
       var wheel = (-1);
       var prevent = false;
       $(function() {
         var $counter = $('#counter');
         var $wheel = $('#wheel');
         var setCounterPosition = function() {
-          var top = $(window).height() - 280;
-          if ($(document).scrollTop() < top) {
+          var top = $(window).height() - 140;
+          if ($(document).scrollTop() < (top - 140)) {
             $counter.css({'position': 'relative', 'top': top + 'px'});
           } else {
             $counter.css({'position': 'fixed', 'top': '140px'});
