--- a/src/private/scroll07.html
+++ b/src/private/scroll07.html
@@ -19,8 +19,7 @@
   <body style="margin: 0px">
     <img style="position: fixed; width: 100%; height: 100%" src="bg.jpg"/>
     <div style="position: relative; height: 3000px; background-color: yellow; width: 160px">
-      <div style="position: relative; z-index: 1; height: 140px"></div>
-      <div id="counter" style="position: relative; top: -140px; background: cyan">0</div>
+      <div id="counter" style="position: relative; background: cyan">0</div>
     </div>
     <div id="wheel" style="position: fixed; top: 0px; background: lightgreen"></div>
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
@@ -32,8 +31,8 @@
         var $counter = $('#counter');
         var $wheel = $('#wheel');
         var setCounterPosition = function() {
-          var top = $(window).height() - 280;
-          if ($(document).scrollTop() < top) {
+          var top = $(window).height() - 140;
+          if ($(document).scrollTop() < (top - 140)) {
             $counter.css({'position': 'relative', 'top': top + 'px'});
           } else {
             $counter.css({'position': 'fixed', 'top': '140px'});
